  - Augmented Vision techs now correctly show after copmleting their special project
  - Fixed the missing icon for High Efficiency Engines doctrine
  - Fixed tank guns requiring heavy tank turret to be always mounted
  - Fixed the Space Program special projects not being researchable due to needing a DLC tech
  - Fixed trigger for Poland checking for removed idea, bloating the logs

 Content:
  - Added several new Internal Faction Events
  - Added an option to not condemn raids if you aren't the one being attacked (before you always lost opinion)

 Database:
  - Added "Nuclear Energy" to all of the nations who have nuclear reactors
  - Enabled submarine based ICBMs
  - Add back NIRBM to nations who previously had the tech
  - Added 1 nuclear reactor to the state of "Sindh" in Pakistan
  - France now starts with Nuclear Power Offensive due to their "Warning Shot" doctrine
  - Added 1 nuclear reactor to the state of "Western Bulgaria" in Bulgaria
  - Fixed Canada getting extra technology it shouldn't

 Game Rules:
  - Fixed the AI Easy/Very Easy Energy options not allowing achievements

 Graphics:
  - Added an icon for twin barrel mortar conversion module

 Interface:
  - Fixed misalignment between MIOs and nuclear policies
  - Fixed facility list being cut-off at the bottom
  - Fixed clippy

 Localization:
  - Fixed missing tooltip for Medium Naval Nuclear Engines
  - Improved the localization of the "Serbia Asks for Investments" event

 Special Projects:
  - Super Heavy Tank Turrets are now locked behind both "Large Gun Tech" & 4th Generation Tank Hulls
  - Increased the Civilian R&D Breakthrough cost for "Thorium Nuclear Fuel"
  - Added a resource cost to "Super Heavy Tank Turrets" to help make it more balanced
  - "Fully Autonomous Computer Frameworks" has now moved to "Human Imitation AI"
  - Moved "Double Cannons" module for AFVs from the hull tech into a special project and buffed the stats a little bit

 Technology: