@@ -173,7 +173,7 @@ ideas = {
 			}
 			cancel_if_invalid = no
 		}
-		
+
 
 		# Country Specific Religious Ideas
 		assianism = {
@@ -562,6 +562,17 @@ ideas = {
 			modifier = {
 				research_speed_factor = 0.02
 				political_power_gain = 0.10
+			}
+		}
+		ARM_kom_code = {
+			allowed = { always = no }
+			allowed_civil_war = { always = yes }
+			picture = communist_cadres
+
+			modifier = {
+				research_speed_factor = 0.2
+				political_power_gain = 0.5
+				stability_weekly = 0.001
 			}
 		}
 		UKR_idea_orthodox_chrisitan_church = {
