@@ -1500,25 +1500,6 @@ ideas = {
 				consumer_goods_factor = -0.03
 			}
 		}
-		#Кодекс коммунизма
-		ARM_kom_code = {
-
-			allowed = {
-				original_tag = ARM
-				always = no
-			}
-
-			allowed_civil_war = {
-				always = no
-			}
-
-			picture = communist_cadres
-			modifier = {
-				research_speed_factor = 0.2
-				political_power_gain = 0.5
-				stability_weekly = 0.001
-			}
-		}
 		#Левый милитаризм
 		ARM_left_millitarism = {
 
