@@ -3010,27 +3010,23 @@ focus_tree = {
 	focus = {
 		id = ARM_prohibition_religion
 		icon = christianophobia
+
+		x = 4
+		y = 10
+
 		cost = 10
+
 		prerequisite = {
 			focus = ARM_secularism
 			focus = ARM_KPA
 			focus = ARM_OKPA
 		}
+		mutually_exclusive = { focus = ARM_tolerance }
+
 		available = {
 			has_completed_focus = ARM_victory_of_reds
 		}
-		mutually_exclusive = {
-			focus = ARM_tolerance
-		}
-		x = 4
-		y = 10
-		ai_will_do = {
-			base = 1
-			modifier = {
-				has_global_flag = ARM_COMMIES_PATH
-				add = 50
-			}
-		}
+
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus ARM_prohibition_religion"
 			if = {
@@ -3060,6 +3056,14 @@ focus_tree = {
 					remove_idea = The_Clergy
 					add_idea = intelligence_community
 				}
+			}
+		}
+
+		ai_will_do = {
+			base = 1
+			modifier = {
+				has_global_flag = ARM_COMMIES_PATH
+				add = 50
 			}
 		}
 	}
