@@ -443,9 +443,9 @@ focus_tree = {
 			log = "[GetDateText]: [Root.GetName]: Focus SER_purge_kleptocratic"
 			if = {
 				limit = {
-					has_idea = SER_the_kleptocratic
+					has_idea = SER_The_kleptocratic
 				}
-				remove_ideas = SER_the_kleptocratic
+				remove_ideas = SER_The_kleptocratic
 			}
 			if = {
 				limit = {
@@ -4357,30 +4357,37 @@ focus_tree = {
 	focus = {
 		id = SER_remove_previous_kleptocrats
 		icon = SER_destroy_mon
+
 		x = 0
 		y = 3
+		relative_position_id = SER_war_mafia
+
 		cost = 5
-		prerequisite = {
-			focus = SER_active_combatting
-		}
+
 		available = {
-			NOT = {
-				OR = {
-					has_country_leader = { name = "Slobodan Milošević" ruling_only = yes }
-					nationalist_monarchists_are_in_power = yes
-					nationalist_fascist_are_in_power = yes
-				}
+			OR = {
+				NOT = { has_country_leader = { name = "Slobodan Milošević" ruling_only = yes } }
+				nationalist_monarchists_are_not_in_power = yes
+				nationalist_fascist_are_not_in_power = yes
 			}
 		}
-		relative_position_id = SER_war_mafia
+
+		prerequisite = { focus = SER_active_combatting }
 		search_filters = { FOCUS_FILTER_POLITICAL }
+
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus SER_remove_previous_kleptocrats"
 			if = {
 				limit = {
-					has_idea = SER_the_kleptocratic
+					has_idea = SER_The_kleptocratic
 				}
-				remove_ideas = SER_the_kleptocratic
+				remove_ideas = SER_The_kleptocratic
+			}
+			if = {
+				limit = {
+					has_idea = SER_The_kleptocratic_1
+				}
+				remove_ideas = SER_The_kleptocratic_1
 			}
 			if = {
 				limit = {
@@ -4395,6 +4402,7 @@ focus_tree = {
 				remove_ideas = SER_The_kleptocratic_3
 			}
 		}
+
 		ai_will_do = {
 			base = 1
 		}
@@ -7253,9 +7261,9 @@ focus_tree = {
 			}
 			if = {
 				limit = {
-					has_idea = SER_the_kleptocratic
+					has_idea = SER_The_kleptocratic
 				}
-				remove_ideas = SER_the_kleptocratic
+				remove_ideas = SER_The_kleptocratic
 			}
 			if = {
 				limit = {
