@@ -3650,6 +3650,7 @@ update_state_variables = {
 		every_controlled_state = {
 			add_to_temp_variable = { PREV.num_missile_silo = building_level@rocket_site }
 			add_to_temp_variable = { PREV.num_anti_air_building = building_level@anti_air_building }
+			add_to_variable = { PREV.total_number_of_controlled_states = 1 }
 			add_to_variable = { PREV.rocket_sites = building_level@rocket_site }
 			add_to_variable = { PREV.anti_air_building = buildling_level@anti_air_building }
 			add_to_variable = { PREV.agriculture_district_total = building_level@agriculture_district }
