@@ -7986,21 +7986,33 @@ pol_distance_matrix_23 = {
 # Add Coalition Member
 # set_temp_variable = { add_col_one = 0-23 } -- Required
 add_coalition_members_effect = {
-	custom_effect_tooltip = add_coalition_members_effect_TT
-	add_to_array = { gov_coalition_array = add_col_one }
-	hidden_effect = {
-		update_government_coalition_strength = yes
-		set_coalition_drift = yes
+	if = {
+		limit = {
+			NOT = { is_in_array = { gov_coalition_array = add_col_one } }
+		}
+		custom_effect_tooltip = add_coalition_members_effect_TT
+		add_to_array = { gov_coalition_array = add_col_one }
+		hidden_effect = {
+			update_government_coalition_strength = yes
+			set_coalition_drift = yes
+		}
 	}
 }
 
 # Function: Remove Coalition Member
 # Parameters: set_temp_variable = { remove_col_one = 0-23 }
 remove_coalition_members_effect = {
-	custom_effect_tooltip = remove_coalition_members_effect_TT
-	remove_from_array = { gov_coalition_array = remove_col_one }
-	update_government_coalition_strength = yes
-	set_coalition_drift = yes
+	if = {
+		limit = {
+			is_in_array = { gov_coalition_array = remove_col_one }
+		}
+		custom_effect_tooltip = remove_coalition_members_effect_TT
+		add_to_array = { gov_coalition_array = remove_col_one }
+		hidden_effect = {
+			update_government_coalition_strength = yes
+			set_coalition_drift = yes
+		}
+	}
 }
 
 # Function: Change Party Command
