@@ -631,6 +631,27 @@
 		add_to_array = { cyber_targets = NKO }
 		add_to_array = { cyber_targets = SOV }
 	}
+	if = {
+		limit = { has_dlc = "Gotterdammerung" }
+		complete_special_project = sp:sp_space_program
+
+		set_technology = {
+			air_defense = 1
+			sam_missile_equipment = 1
+			sam_missile_equipment_1 = 1
+			sam_missile_equipment_2 = 1
+
+			COMSAT1 = 1
+			COMSAT2 = 1
+			COMSAT3 = 1
+			COMSAT4 = 1
+
+			SPYSAT1 = 1
+			SPYSAT2 = 1
+			SPYSAT3 = 1
+			SPYSAT4 = 1
+		}
+	}
 
 	set_technology = {
 
