@@ -3383,52 +3383,20 @@
  sam_missile_equipment_desc: "A surface-to-air missile (SAM) is a missile designed to be launched from the ground to destroy aircraft or other missiles."
  sam_missile_equipment_1: "SAM 1965"
  sam_missile_equipment_1_desc: "A surface-to-air missile (SAM) is a missile designed to be launched from the ground to destroy aircraft or other missiles."
- sam_missile_equipment_1_TEL: "3x SAM Launcher Batteries"
- sam_missile_equipment_1_TEL_desc: "§Y3x SAM Launcher Batteries§!. A battery will consist of §Y2 launchers§!. The battery configuration are 2 tracked TEL (transporter erector launcher) with one launchers each (2x1)."
- sam_missile_equipment_1_ship: "4x2-arm launcher (AD&MD)"
- sam_missile_equipment_1_ship_desc: "§YAir & Missile Defense Ships§! will be equipped with §Y4x2-arm launcher (AD&MD)§! with the following missile configuration:\n§Y4xSAM (AD)§!\n§Y2xSAM (MD)\n§Y2xABM§!"
  sam_missile_equipment_2: "SAM 1975"
  sam_missile_equipment_2_desc: "Surface-to-air missile (SAM 1975):\n§YAir Defense§!:\nIntercept Chance: §Y50%§! | SAM Damage: §Y2§! | Base Naval AA attack factor: §Y-55%§!\nCosts (p.a.): $§Y0.002§! billion\n§YMissile Defense§!:\nRange: §Y80§! km | Intercept Chance: §Y50%§! | Costs (p.a.): $§Y0.002§! billion\n§YProduction§!:\nPrice per Unit: $§Y0.002§! billion | Civil Industry per unit: §Y1§! | Production days per unit: §Y25§!"
- sam_missile_equipment_2_TEL: "4x SAM Launcher Batteries"
- sam_missile_equipment_2_TEL_desc: "§Y4x SAM Launcher Batteries§!. A battery will consist of §Y3 launchers§!. The battery configuration are three 4-wheeled TEL with one launchers each (3x1)."
- sam_missile_equipment_2_ship: "3xquad launcher (AD&MD)"
- sam_missile_equipment_2_ship_desc: "§YAir & Missile Defense Ships§! will be equipped with §Y3xquad launcher (AD&MD)§! with the following missile configuration:\n§Y4xSAM (AD)§!\n§Y4xSAM (MD)\n§Y4xABM§!"
  sam_missile_equipment_3: "SAM 1985"
  sam_missile_equipment_3_desc: "Surface-to-air missile (SAM 1985):\n§YAir Defense§!:\nIntercept Chance: §Y60%§! | SAM Damage: §Y3§! | Base Naval AA attack factor: §Y-50%§!\nCosts (p.a.): $§Y0.003§! billion\n§YMissile Defense§!:\nRange: §Y120§! km | Intercept Chance: §Y60%§! | Costs (p.a.): $§Y0.003§! billion\n§YProduction§!:\nPrice per Unit: $§Y0.003§! billion | Civil Industry per unit: §Y1§! | Production days per unit: §Y30§!"
- sam_missile_equipment_3_TEL: "5x SAM Launcher Batteries"
- sam_missile_equipment_3_TEL_desc: "§Y5x SAM Launcher Batteries§!. A battery will consist of §Y4 launchers§!. The battery configuration are two 6-wheeled TEL with two launchers each (2x2)."
- sam_missile_equipment_3_ship: "16 cell VLS (AD&MD)"
- sam_missile_equipment_3_ship_desc: "§YAir & Missile Defense Ships§! will be equipped with §Y16 cell VLS (AD&MD)§! with the following missile configuration:\n§Y4xSAM (AD)§!\n§Y6xSAM (MD)\n§Y6xABM§!"
  sam_missile_equipment_4: "SAM 1995"
  sam_missile_equipment_4_desc: "Surface-to-air missile (SAM 1995):\n§YAir Defense§!:\nIntercept Chance: §Y70%§! | SAM Damage: §Y4§! | Base Naval AA attack factor: §Y-45%§!\nCosts (p.a.): $§Y0.004§! billion\n§YMissile Defense§!:\nRange: §Y160§! km | Intercept Chance: §Y70%§! | Costs (p.a.): $§Y0.004§! billion\n§YProduction§!:\nPrice per Unit: $§Y0.004§! billion | Civil Industry per unit: §Y1§! | Production days per unit: §Y35§!"
- sam_missile_equipment_4_TEL: "6x SAM Launcher Batteries"
- sam_missile_equipment_4_TEL_desc: "§Y6x SAM Launcher Batteries§!. A battery will consist of §Y6 launchers§!. The battery configuration are three 6-wheeled TEL with two launchers each (3x2)."
- sam_missile_equipment_4_ship: "24 cell VLS (AD&MD)"
- sam_missile_equipment_4_ship_desc: "§YAir & Missile Defense Ships§! will be equipped with §Y24 cell VLS (AD&MD)§! with the following missile configuration:\n§Y4xSAM (AD)§!\n§Y10xSAM (MD)\n§Y10xABM§!"
  sam_missile_equipment_5: "SAM 2005"
  sam_missile_equipment_5_desc: "Surface-to-air missile (SAM 2005):\n§YAir Defense§!:\nIntercept Chance: §Y75%§! | SAM Damage: §Y5§! | Base Naval AA attack factor: §Y-40%§!\nCosts (p.a.): $§Y0.005§! billion\n§YMissile Defense§!:\nRange: §Y200§! km | Intercept Chance: §Y75%§! | Costs (p.a.): $§Y0.005§! billion\n§YProduction§!:\nPrice per Unit: $§Y0.005§! billion | Civil Industry per unit: §Y1§! | Production days per unit: §Y40§!"
- sam_missile_equipment_5_TEL: "7x SAM Launcher Batteries"
- sam_missile_equipment_5_TEL_desc: "§Y7x SAM Launcher Batteries§!. A battery will consist of §Y8 launchers§!. The battery configuration are two 8-wheeled TEL with four launchers each (2x4)."
- sam_missile_equipment_5_ship: "32 cell VLS (AD&MD)"
- sam_missile_equipment_5_ship_desc: "§YAir & Missile Defense Ships§! will be equipped with §Y32 cell VLS (AD&MD)§! with the following missile configuration:\n§Y4xSAM (AD)§!\n§Y14xSAM (MD)\n§Y14xABM§!"
  sam_missile_equipment_6: "SAM 2015"
  sam_missile_equipment_6_desc: "Surface-to-air missile (SAM 2015):\n§YAir Defense§!:\nIntercept Chance: §Y80%§! | SAM Damage: §Y6§! | Base Naval AA attack factor: §Y-35%§!\nCosts (p.a.): $§Y0.006§! billion\n§YMissile Defense§!:\nRange: §Y400§! km | Intercept Chance: §Y80%§! | Costs (p.a.): $§Y0.006§! billion\n§YProduction§!:\nPrice per Unit: $§Y0.006§! billion | Civil Industry per unit: §Y1§! | Production days per unit: §Y45§!"
- sam_missile_equipment_6_TEL: "8x SAM Launcher Batteries"
- sam_missile_equipment_6_TEL_desc: "§Y8x SAM Launcher Batteries§!. A battery will consist of §Y12 launchers§!. The battery configuration are three 8-wheeled TEL with four launchers each (3x4)."
- sam_missile_equipment_6_ship: "48 cell VLS (AD&MD)"
- sam_missile_equipment_6_ship_desc: "§YAir & Missile Defense Ships§! will be equipped with §Y48 cell VLS (AD&MD)§! with the following missile configuration:\n§Y4xSAM (AD)§!\n§Y22xSAM (MD)\n§Y22xABM§!"
  sam_missile_equipment_7: "SAM 2025"
  sam_missile_equipment_7_desc: "Surface-to-air missile (SAM 2025):\n§YAir Defense§!:\nIntercept Chance: §Y85%§! | SAM Damage: §Y7§! | Base Naval AA attack factor: §Y-30%§!\nCosts (p.a.): $§Y0.007§! billion\n§YMissile Defense§!:\nRange: §Y800§! km | Intercept Chance: §Y85%§! | Costs (p.a.): $§Y0.007§! billion\n§YProduction§!:\nPrice per Unit: $§Y0.007§! billion | Civil Industry per unit: §Y1§! | Production days per unit: §Y50§!"
- sam_missile_equipment_7_TEL: "SAM Launcher Battalion"
- sam_missile_equipment_7_TEL_desc: "§YSAM Launcher Battalion§!. A battalion will have 9 batteries. A battery will consist of §Y16 launchers§!. The battery configuration are four 8-wheeled TEL with four launchers each (4x4)."
- sam_missile_equipment_7_ship: "56 cell VLS (AD&MD)"
- sam_missile_equipment_7_ship_desc: "§YAir & Missile Defense Ships§! will be equipped with §Y56 cell VLS (AD&MD)§! with the following missile configuration:\n§Y4xSAM (AD)§!\n§Y26xSAM (MD)\n§Y26xABM§!"
  sam_missile_equipment_8: "SAM 2035"
  sam_missile_equipment_8_desc: "Surface-to-air missile (SAM 2035):\n§YAir Defense§!:\nIntercept Chance: §Y90%§! | SAM Damage: §Y8§! | Base Naval AA attack factor: §Y-25%§!\nCosts (p.a.): $§Y0.008§! billion\n§YMissile Defense§!:\nRange: §Y1000§! km | Intercept Chance: §Y90%§! | Costs (p.a.): $§Y0.008§! billion\n§YProduction§!:\nPrice per Unit: $§Y0.008§! billion | Civil Industry per unit: §Y1§! | Production days per unit: §Y55§!"
- sam_missile_equipment_8_TEL: "SAM Launcher Regiment"
- sam_missile_equipment_8_TEL_desc: "§YSAM Launcher Regiment§!. A regiment will have 10 batteries. A battery will consist of §Y20 launchers§!. The battery configuration are five 8-wheeled TEL with four launchers each (5x4)."
- sam_missile_equipment_8_ship: "64 cell VLS (AD&MD)"
- sam_missile_equipment_8_ship_desc: "§YAir & Missile Defense Ships§! will be equipped with §Y64 cell VLS (AD&MD)§! with the following missile configuration:\n§Y4xSAM (AD)§!\n§Y30xSAM (MD)\n§Y30xABM§!"
  missile_defense: "Missile Defense"
  missile_defense_desc: "Missile Defense"
  nuclear_technology: "Nuclear Technology"
