@@ -27,6 +27,9 @@ v1.11.1
   - Fixed tank guns requiring heavy tank turret to be always mounted
   - Fixed the Space Program special projects not being researchable due to needing a DLC tech
   - Fixed trigger for Poland checking for removed idea, bloating the logs
+  - Fixed the "Remove Previous Kleptocrats" in Serbia not removing an idea it should
+  - Fixed the Armenian focus "Communism Codex" focus making you have no religion icon
+  - Fixed some effects forcing duplicate gov_coalition_array members causing you to have a ton more government coalition support then you should
 
  Content:
   - Added several new Internal Faction Events
